<resources>
    <string name="Desc">Welcome!!! \n this example will tell that yor that how we can trim video, like whatsapp use when we share video to anyone.</string>
    <string name="Get_Started">Get Started</string>
    <string name="Ok">Ok</string>
    <string name="short_seconds">sec</string>
    <string name="megabyte">MB</string>
    <string name="kilobyte">KB</string>
    <string name="label_select_video">Select Video</string>
    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="toast_cannot_retrieve_selected_video">Cannot retrieve selected video</string>
    <string name="video_saved_at">Video saves at : $%1s</string>
    <string name="title_description">A library with UI and mechanisms to trim local videos on Android applications</string>
    <string name="description_app">
            # Provide UI to preview and select start/end of the video to trim
        \n\n# Thumbnails with frame by frame overview of the video
        \n\n# Works with gallery and recorded videos
    </string>
    <string name="pick_a_video">Select or record a a video below to try it out:</string>
    <string name="trimming_progress">Trimming your video...</string>
    <string name="facebook_app_id">505434003138064</string>
    <string name="app_name">Gif Maker</string>
    <string name="rangeSeekBarText">Use RangeSeekbar to select time range for cutting video or extracting images from video(rangeseekbar ineffective for other options)</string>
    <string name="dialogMessage">The process will take some time.Please be patient.</string>
    <string name="title_activity_gifs">GifsActivity</string>
    <string name="yourgifs">Your GIF</string>
    <string name="gifhy">GIFHY</string>
    <string name="other_gif">Other GIFs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="add">Add</string>
    <string name="add_gif">Add GIF</string>
    <string name="add_image">Add image</string>
    <string name="add_label">Add label</string>
    <string name="animal">Animal</string>
    <string name="app_ads">Power Doctor\nFast charger</string>
    <string name="apply">Apply</string>
    <string name="are_you_sure_delete_this_item">Are you sure delete this item?</string>
    <string name="back">Back</string>
    <string name="back_dot">back ...</string>
    <string name="background_gif">Background GIF</string>
    <string name="black">Black</string>
    <string name="buy_premium_member">Update premium member</string>
    <string name="cancel">Cancel</string>
    <string name="capture_image">Capture Image</string>
    <string name="choose_a_video_to_use">Choose a video to use!</string>
    <string name="choose_end_time">Choose end time :</string>
    <string name="choose_folder_save">Choose folder save</string>
    <string name="choose_images">Choose images</string>
    <string name="choose_option_which_you_want">Choose option which you want :</string>
    <string name="choose_start_time">Choose start time :</string>
    <string name="clear_all">Clear all</string>
    <string name="control_play">Control play</string>
    <string name="copy_success">Copy success</string>
    <string name="create_new">Create New</string>
    <string name="crop">Crop</string>
    <string name="date">Date</string>
    <string name="date_dot">Date :</string>
    <string name="decode_fail">Something failed. Please try again!</string>
    <string name="default_option">Default</string>
    <string name="delete">Delete</string>
    <string name="description_1">Charger faster 30%, Protect and Extend your battery life up to 50%</string>
    <string name="description_2">Junk Cleaner and Boost your phone</string>
    <string name="details">Details</string>
    <string name="do_not_show_again">Don\'t show again</string>
    <string name="do_you_want_exit">Do you want exit?</string>
    <string name="done">Done</string>
    <string name="download_failed">Download failed.</string>
    <string name="downloading">Downloading...</string>
    <string name="draw_remove_hit">Draw to remove object.</string>
    <string name="edit">Edit</string>
    <string name="edit_before_save">Edit before save</string>
    <string name="edit_time_show">Edit time show</string>
    <string name="effects">Effects</string>
    <string name="end_time">End :</string>
    <string name="enter_link">Enter link</string>
    <string name="error_null_cursor">Oops, something went wrong!</string>
    <string name="exit">Exit</string>
    <string name="feedback">FeedBack</string>
    <string name="feedback_summary">Tell me all you want about this application.</string>
    <string name="flip_horizontal">Flip horizontal</string>
    <string name="flip_vertical">Flip vertical</string>
    <string name="folder_save">Folder save</string>
    <string name="frame">Frame</string>
    <string name="free">FREE</string>
    <string name="from_camera">From Camera</string>
    <string name="from_giphy_or_gif_link">From GIPHY or .gif link</string>
    <string name="from_link_video">From link video</string>
    <string name="from_multi_images">From images</string>
    <string name="from_recorder">From Screen Recorder</string>
    <string name="from_video_in_device">From video</string>
    <string name="funny">Funny</string>
    <string name="gif_image">GIF Image</string>
    <string name="gif_settings">GIF Settings</string>
    <string name="gif_sticker_or_image_notice">• Speed of GIF Sticker or GIf Image depend on speed of GIF background.\n • Number of frame of GIF Sticker or GIF Image depend on Number of frame GIF background.\n • GIF Sticker or GIF Image play when GIF background play.\n</string>
    <string name="giphy_or_gif_link">GIPHY or .gif link</string>
    <string name="go_to_rate">RATE 5 STARS</string>
    <string name="help">Help</string>
    <string name="help_rate_us">Enjoying GIF Maker - GIF Editor?</string>
    <string name="help_rate_us_tip">Please support us with 5 stars</string>
    <string name="high">High</string>
    <string name="hight_quality">High quality</string>
    <string name="hit_editext_logo">enter text here</string>
    <string name="image">Image</string>
    <string name="input_link">input link</string>
    <string name="install">INSTALL</string>
    <string name="label">Label</string>
    <string name="language">Language</string>
    <string name="limit_exceeded">Can select a maximum of %d images</string>
    <string name="loading">Loading...</string>
    <string name="login_fail">Login failed, try again.</string>
    <string name="low">Low</string>
    <string name="manager_image">Manager</string>
    <string name="max_350_pixel">Max 350 pixel</string>
    <string name="max_400_pixel">Max 400 pixel</string>
    <string name="max_450_pixel">Max 450 pixel</string>
    <string name="max_frame_of_gif">Max frame of GIF</string>
    <string name="max_frame_summary">%d frame. The more number of frame, slower processing.</string>
    <string name="max_number_second">Maximum %.1f second</string>
    <string name="max_number_sticker">Max %d sticker</string>
    <string name="max_size_summary">Max %d pixel</string>
    <string name="medium">Medium</string>
    <string name="min_number_second">Minimum %.1f second</string>
    <string name="more_options">More options...</string>
    <string name="movie">Movie</string>
    <string name="name">Name</string>
    <string name="need_least_one_image">Need least 2 image</string>
    <string name="new_version_infomation">• Add Screen Recorder mode.\n• Fix Turkish language.\n• Fix some bug.</string>
    <string name="next">Next</string>
    <string name="no_ads_only">Buy No ads only 2.99$ or Use promotion key.</string>
    <string name="no_gif_found_please_create_new">No GIF found.\nPlease create new.</string>
    <string name="no_internet_access">No internet access</string>
    <string name="no_media_found">No media found.</string>
    <string name="no_other_gif_found">No other GIF found.</string>
    <string name="no_permission">No permission granted. Please go to Setting and enable permission.</string>
    <string name="no_results_found_for">No results found for \"%s\"</string>
    <string name="not_found">not found.</string>
    <string name="not_support_this_folder">Not support this folder. Try other folder!</string>
    <string name="not_support_this_video">Not support this video, try other video!</string>
    <string name="notice">Notice</string>
    <string name="notice_instagram">• Instagram NOT support GIF, we will convert GIF into video and send Instagram.\n • Instagram support video time more 3 second. So short GIF cannot share via Instagram.\n</string>
    <string name="notification_alarm_title">Maker GIF from them now!!!!</string>
    <string name="notification_recording_subtitle">Click here to stop.</string>
    <string name="notification_recording_title">GIF Maker Screen recording ...</string>
    <string name="number_of_frame">Number of frame :</string>
    <string name="ok">Ok</string>
    <string name="out_size">Size of Gif output</string>
    <string name="path">Path :</string>
    <string name="pick_photo">Pick photo</string>
    <string name="premium">Premium</string>
    <string name="press_and_move_to_crop_video">Press and move to crop video.</string>
    <string name="press_and_move_to_edit_start_or_end_time">Press and move to edit start or and time.</string>
    <string name="press_to_edit_start_or_end_time">Press to edit start or end time.</string>
    <string name="privacy_policy">Privacy &amp; Policy</string>
    <string name="quality_of_output_gif">Quality of Gif output</string>
    <string name="quit">Quit</string>
    <string name="ratio">Ratio</string>
    <string name="re_size">Re-size</string>
    <string name="remove">Remove</string>
    <string name="reset">Reset</string>
    <string name="resolution">Resolution :</string>
    <string name="results_for">Results for \"%s\"</string>
    <string name="rotate">Rotate</string>
    <string name="save">Save</string>
    <string name="save_change_before_back">Save your change before back.</string>
    <string name="save_fast">Save Fast</string>
    <string name="save_now">Save now</string>
    <string name="save_option">Save option</string>
    <string name="save_success">Save success</string>
    <string name="saving">Saving ...</string>
    <string name="search">Search...</string>
    <string name="select_sort_of_input_image">Select sort of input image</string>
    <string name="selected">selected</string>
    <string name="send_to">Send to</string>
    <string name="setting">Setting</string>
    <string name="share">Share</string>
    <string name="share_fail">Share failed. Try again!</string>
    <string name="share_success">Share success!</string>
    <string name="share_via">Share via</string>
    <string name="size">Size :</string>
    <string name="speed">Speed</string>
    <string name="start_time">Start :</string>
    <string name="sticker">Sticker</string>
    <string name="support_link">Support Link</string>
    <string name="time_end_must_larger_than_start_time">Time end must larger than start time and smaller than video time</string>
    <string name="time_start_must_smaller_than_end_time">Time start must smaller than end time</string>
    <string name="title">Title :</string>
    <string name="transparent">Transparent</string>
    <string name="trending">Trending</string>
    <string name="try_again">try again</string>
    <string name="turn_on_off_reminder_daily">Turn on/off reminder daily</string>
    <string name="turn_on_off_reminder_summary">Turn off this notification maybe you will be lost some useful of application.</string>
</resources>