<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<RadioGroup
    android:id="@+id/rd_select_gif_size"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/select_350"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/max_350_pixel"
        />
    <RadioButton
        android:id="@+id/select_400"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/max_400_pixel"
        />
    <RadioButton
        android:id="@+id/select_450"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/max_450_pixel"
        />

</RadioGroup>
</LinearLayout>