<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/enter_link"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:background="#4b4141"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="1px" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/ed_input_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_link"
            android:textColor="@color/blue_text"
            />
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/ok"
            android:layout_below="@id/ed_input_link"
            android:layout_alignParentRight="true"
            android:textColor="@color/white"
            android:layout_margin="7dp"
            android:maxHeight="40dp"
            android:background="@drawable/bg_btn_black"
            />
    </RelativeLayout>

</LinearLayout>