<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context="com.long3f.activity.SettingActivity">

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="54dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/top_bar_text_selector"
            android:clickable="true"
            android:padding="12dp"
            android:src="@drawable/ic_arrow_back_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/btn_back"
            android:text="@string/setting"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#ccc" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            android:id="@+id/titlePre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/gif_settings" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@id/titlePre"
            android:background="#ccc" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/size_of_gif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bar_text_selector"
        android:padding="10dp">

        <ImageView
            android:id="@+id/img_size_of_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:src="@drawable/ic_settings_size" />

        <TextView
            android:id="@+id/txt_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_alignTop="@+id/img_size_of_image"
            android:layout_toEndOf="@+id/img_size_of_image"
            android:layout_toRightOf="@+id/img_size_of_image"
            android:text="@string/out_size"
            android:textColor="#000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_gif_size_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_size_summary"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/txt_size"
            android:layout_alignLeft="@+id/txt_size"
            android:layout_alignStart="@+id/txt_size" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/number_of_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bar_text_selector"
        android:padding="10dp">

        <ImageView
            android:id="@+id/img_size_of_frame"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:src="@drawable/ic_btn_from_mutil_image" />

        <TextView
            android:id="@+id/txt_size_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_alignTop="@+id/img_size_of_frame"
            android:layout_toEndOf="@+id/img_size_of_frame"
            android:layout_toRightOf="@+id/img_size_of_frame"
            android:text="@string/max_frame_of_gif"
            android:textColor="#000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_gif_number_frame_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_frame_summary"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/txt_size_frame"
            android:layout_alignLeft="@+id/txt_size_frame"
            android:layout_alignStart="@+id/txt_size_frame" />

    </RelativeLayout>

</LinearLayout>
