<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/create_new"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:background="#4b4141"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="1px" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ln_from_camera"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/bg_btn_top_actionbar"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_btn_from_camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:gravity="center"
                android:text="@string/from_camera"
                android:textColor="#252525"
                android:textSize="@dimen/share_dialog_name_option_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_from_video"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_btn_top_actionbar"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_btn_from_video" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:gravity="center"
                android:text="@string/from_video_in_device"
                android:textColor="#252525" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_from_mutil_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/bg_btn_top_actionbar"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_btn_from_mutil_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:gravity="center"
                android:text="@string/from_multi_images"
                android:textColor="#252525"
                android:textSize="@dimen/share_dialog_name_option_text_size" />
        </LinearLayout>
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:background="#4b4141"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="1px" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:id="@+id/ln_from_recorder"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/bg_btn_top_actionbar"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_btn_from_recorder" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:gravity="center"
                android:text="@string/from_recorder"
                android:textColor="#252525"
                android:textSize="@dimen/share_dialog_name_option_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_from_gif_url"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_btn_top_actionbar"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_btn_from_gif_url" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:gravity="center"
                android:text="@string/from_giphy_or_gif_link"
                android:textColor="#252525" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_from_url_video"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_btn_top_actionbar"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_btn_from_url_video" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:gravity="center"
                android:text="@string/from_link_video"
                android:textColor="#252525"
                android:textSize="@dimen/share_dialog_name_option_text_size" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>