<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topbar">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/spinner_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff">

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="enterAlways">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">

                    <Spinner
                        android:id="@+id/spinner_category"
                        style="@style/Widget.AppCompat.DropDownItem.Spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:drawableRight="@android:drawable/spinner_dropdown_background"
                        android:entries="@array/category"
                        android:padding="10dp"
                        android:spinnerMode="dropdown" />
                </RelativeLayout>


            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_giphy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </android.support.design.widget.CoordinatorLayout>

    <ProgressBar
        android:id="@+id/progress_bar_giphy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/network_err"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">


        <TextView
            android:id="@+id/tv_no_internet_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
            android:text="@string/no_internet_access"
            android:textColor="#000000"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/btn_giphy_try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_no_internet_label"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:duplicateParentState="false"
            android:focusable="true"
            android:text="@string/try_again"
            android:textColor="@drawable/bg_text_btn_done"
            android:textSize="20dp"
            android:textStyle="bold" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:visibility="gone">

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:src="@drawable/ic_btn_dialog_close" />

        <EditText
            android:id="@+id/ed_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/img_search"
            android:layout_toRightOf="@+id/img_close"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/img_search"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_btn_button_search"
            android:padding="5dp" />
    </RelativeLayout>
</RelativeLayout>
